Injecao de Dependencia

--- a/Minha1Conexao/appsettings.Development.json
+++ b/Minha1Conexao/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "MinhaConexao": "Server=DESKTOP-7LVNARC\\SQLEXPRESS; Database=Minha1Conexao; Trusted_Connection=True;"
   }
 }
